Moved some logic from HoL console to core. Added null check on HoL score.

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,2 +1,3 @@
-ToDo
-- Ace is not highest when not played first
+ToDo HighOrLow
+- Hjärter Ess (öppet kort) inte högre än Klöver 6 (gömt kort)
+- Null check på High or low high score
